log
Thu Apr  7 11:54:10 HSP 2022: 
 hashmap.c | 47 ++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 46 insertions(+), 1 deletion(-)
 tests:  0|0
68105bc
Thu Apr  7 11:54:42 HSP 2022: 
 tests:  0|0
d1269ee
Thu Apr  7 11:56:23 HSP 2022: 
 tests:  0|0
792c724
Thu Apr  7 11:59:20 HSP 2022: 
 tests:  0|0
a382851
Thu Apr  7 12:00:12 HSP 2022: 
 tests:  0|0
af5c632
Thu Apr  7 12:05:43 HSP 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:96:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return &Map;
            ^~~~
hashmap.c:96:12: error: function returns address of local variable [-Werror=return-local-addr]
cc1.exe: all warnings being treated as errors
Compilation failed
8bcb02a
Thu Apr  7 12:05:52 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b64473
Thu Apr  7 12:07:02 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6326d8d
Thu Apr  7 12:12:48 HSP 2022: 
 hashmap.c | 20 +++++---------------
 1 file changed, 5 insertions(+), 15 deletions(-)
 tests:  6|4
total_score: 30/70
d364622
